--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "browserify main.js -o bundle.js",
     "watch": "watchify main.js -o bundle.js -v",
     "test": "mocha"
   },
